Fix jumbotron padding on small screens

--- a/css/app.css
+++ b/css/app.css
@@ -56,4 +56,7 @@ footer .nav-item {
   .display-4 {
     font-size: 2.5rem;
   }
+  .jumbotron {
+    padding: 4rem 0rem;
+  }
 }
